added link to rendered version

--- a/Tidyverse_wf.qmd
+++ b/Tidyverse_wf.qmd
@@ -9,11 +9,12 @@ format:
     toc: true
     toc-depth: 3
     output-file: index.html
+    search: true
+    theme: cosmo
 code-block-bg: true
 code-block-border-left: "#31BAE9"
 editor_options: 
   chunk_output_type: inline
-output-dir: docs  
 ---
 
 
@@ -56,7 +57,7 @@ In this tutorial we will learn about the Tidyverse by exploring the palmerpengui
 Shortcuts allow you to use certain key combinations to insert pipes, cell blocks and other useful things without having to type everything and allows to speed up things.
 
 - **Ctrl/Cmd + Shift + M** is used to insert a pipe.
-- **Ctrl/Cmd + Alt + I**is used  to insert a new code cell block.
+- **Ctrl/Cmd + Alt + I** is used  to insert a new code cell block.
 - Pressing `Tab` while writing code auto-completes text. Try this by tying `?filt` and pressing `Tab`, you can see all options coming up and you can select the one you want by using the arrow symbols and pressing enter
 
 
