--- a/Tidyverse_wf.qmd
+++ b/Tidyverse_wf.qmd
@@ -55,7 +55,7 @@ In this tutorial we will learn about the Tidyverse by exploring the palmerpengui
 :::{.callout-note}
 Whenever we ask a question the solution/the code will be hidden.
   
-You can show the code by pressing on \<Code\>.
+You can show the code by pressing on \<Click me to see an answer\>.
 :::
 
 
@@ -195,14 +195,24 @@ There are other operators that might come in handy for filtering dataframes:
 
 **How many observations do we have if we only look at penguins that have flippers equal to or longer than 200 mm?**
 
-```{r}
-#| code-fold: true
-#| eval: false
+<details>
+    <summary>Click me to see an answer</summary>
 
-#we work with 114 rows of data
+```{r}
 penguins |>
   filter(flipper_length_mm >= 200)
 ```
+
+```{r}
+#we can also use the pipe and use a base R function to count the number of rows
+penguins |>
+  filter(flipper_length_mm >= 200) |> 
+  nrow()
+```
+
+We work with 152 rows of data.
+
+</details>
 
 
 
@@ -214,6 +224,7 @@ We can also easily exclude data from 2007 using the `!` symbol:
 penguins |>
   filter(year != 2007)
 ```
+
 
 ### Filtering using characters
 
@@ -244,16 +255,17 @@ penguins |>
 
 **How many observations do we have when we exclude data from 2008 and only look at data collected from the island Biscoe?**
 
-```{r}
-#| code-fold: true
-#| eval: false
+<details>
+    <summary>Click me to see an answer</summary>
 
-#we work with 104 rows of data
+```{r}
 penguins |>
   filter(year != 2008, island == "Biscoe")
 ```
 
+We work with 104 rows of data.
 
+</details>
 
 
 
@@ -307,14 +319,31 @@ penguins |>
 ```
 
 
+**Exercise**
+
+Select only columns if they contain length measurements or species information.
+
+<details>
+    <summary>Click me to see an answer</summary>
+
+```{r}
+penguins |> 
+  select(contains("length") | contains("species"))
+```
+
+</details>
+
+
 ## Distinct
 
-The distinct verb is a quick way to summarize all distinct values in a column:
+The distinct verb is a quick way to summarize all distinct values or characters in a column:
 
 ```{r}
 penguins |> 
   distinct(island)
 ```
+
+
 
 ## Arrange
 
@@ -365,14 +394,15 @@ Notice, that the column with the body mass in kg is not the dataframe right now.
 
 How would you calculate the bill length in cm?
 
-```{r}
-#| code-fold: true
-#| eval: false
+<details>
+    <summary>Click me to see an answer</summary>
 
+```{r}
 penguins %>%
   mutate(bill_length_cm = bill_length_mm / 10)
 ```
 
+</details>
 
 
 ## Count
@@ -384,6 +414,19 @@ penguins |>
   count(species) 
 ```
 
+
+**Exercise**
+
+Count the number of observations per species and island.
+
+<details>
+    <summary>Click me to see an answer</summary>
+
+```{r}
+penguins |> 
+  count(species, island) 
+```
+</details>
 
 
 
@@ -401,7 +444,7 @@ We won't use the verbs in this tutorial, but they are anyhow useful for data tra
 
 ## Combining verbs
 
-As we said above, we can use the pipe to combine several verbs. Let's identify the three highest bill length measurement for the year 2007 :
+As we said above, we can use the pipe to combine several verbs. Let's identify the species with the three highest bill length measurement for the year 2007 and also record from what islands these specimens came from :
 
 ```{r}
 penguins %>%
@@ -418,18 +461,23 @@ penguins %>%
 
 Answer the following question:
 
-**What is the highest body mass in kg recorded for Gentoo penguins in 2009?**
+**What is the highest body mass in kg recorded for Gentoo penguins in 2007 and from what island did that specimen come from?**
+
+<details>
+    <summary>Click me to see an answer</summary>
 
 ```{r}
-#| code-fold: true
-#| eval: false
-
-# answer: 6.30 kg
 penguins %>%
   mutate(body_mass_kg = body_mass_g / 1000) |> 
   filter(species == "Gentoo", year == 2007) |> 
-  arrange(desc(body_mass_kg)) 
+  arrange(desc(body_mass_kg)) |> 
+  select(island, body_mass_kg) |> 
+  head(1)
 ```
+
+Answer: 6.30 kg and from Biscoe.
+
+</details>
 
 
 
@@ -440,18 +488,20 @@ When we initially explored our data frame, we saw some data was missing (i.e. NA
 With some other datasets you might encounter Nan, which is used for data not representing a number.
 
 
-### Exercise 2
-
-**Question**:
+### Exercise
 
 Using the verbs you have learned, how could you identify if there are any missing data when recording the sex of the penguins? Notice: We can use the `summary()` function to do this, but try this using a verb for this:
 
+<details>
+    <summary>Click me to see an answer</summary>
+
 ```{r}
-#| code-fold: true
-#| eval: false
 penguins |> 
   count(sex) 
 ```
+
+</details>
+
 
 There are different ways to deal with missing values, what you do depends on your data:
 
@@ -461,7 +511,7 @@ There are different ways to deal with missing values, what you do depends on you
 
 ### Replace the missing values with the mean (or median, or ...)
 
-To do this we mutate the content of a column by using the replace function in which we provide:
+To do this we mutate the content of a column by using the `replace` function in which we provide:
 
 - The column affected
 - What values we want to replace (NAs)
@@ -474,6 +524,7 @@ penguins |>
   mutate(bill_length_mm
          = replace(bill_length_mm, is.na(bill_length_mm), mean(bill_length_mm, na.rm = TRUE)))
 ```
+
 
 ### Drop rows with missing values
 
@@ -503,6 +554,8 @@ Useful functions we can use with summarize:
 - Count: n(), n_distinct()
 - Logical: any(), all()
 
+Let's group our data by species and calculate the mean body mass per species:
+
 ```{r}
 penguins |> 
   group_by(species)  |> 
@@ -511,7 +564,7 @@ penguins |>
 
 Now we see a problem. We get some values for the Chinstrap but not the other two species... Let's try to figure out what the reason is.
 
-Do figure this out, lets first summarize some things:
+To figure this out, lets first summarize some things:
 
 ```{r}
 penguins |> 
@@ -533,7 +586,7 @@ penguins |>
 
 Now we get average values for all 3 species and can easily see that the Gentoo penguins are the heaviest.
 
-An alternative way to remove missing values is by using the `is.na()` function:
+An alternative way to remove missing values is by using `na.rm = TRUE` and `is.na()` functions:
 
 ```{r}
 penguins |> 
@@ -541,9 +594,9 @@ penguins |>
   summarize(avg_weight = mean(body_mass_g, na.rm = TRUE), n = sum(!is.na(body_mass_g)))
 ```
 
-**We see that the values for the Adelie and Gentoo penguins are slightly different compared to the first calculations**
+**We see that the values for the Adelie and Gentoo penguins are slightly different compared to the first calculations, we can also see that the number of observations are different when using the two approaches.**
 
-The difference, is that `drop_na()` drops the full row, regardless where data is missing in our dataframe, while `na.rm = TRUE` in the case above only removes NAs if they are found in the body_mass_g column.
+The difference, is that `drop_na()` drops the full row, regardless where data is missing in our dataframe. In total 11 rows get deleted. In contrast `na.rm = TRUE` only removes NAs if they are found in the body_mass_g column, so only 2 rows are deleted.
 
 When we look at one of our first commands `summary(penguins)` we have seen that 11 values are missing for the sex while only 2 values were missing for the body_mass_g data explaining the difference between `drop_na` (which acts on the full dataframe and removes 11 rows) and `na.rm` (which in the example above only removes missing data from the body mass column).
 
@@ -553,15 +606,10 @@ In the end its up to you and the experimental setup how you deal with missing da
 
 Compare the average flipper length of male and female penguins, calculate the mean, median and standard deviation.
 
+<details>
+    <summary>Click me to see an answer</summary>
+
 ```{r}
-#| code-fold: true
-#| eval: false
-
-#males seem to have slightly longer bills
-#but since the sd's overlap this might not be significant
-#notice, in this case it doesn't make a difference if we use drop_na or na.rm=TRUE
-#there is no large difference between the median and mean, so we likely have no outliers
-
 penguins |> 
   drop_na() |> 
   group_by(sex)  |> 
@@ -569,5 +617,11 @@ penguins |>
             median_bill = median(bill_length_mm),
             sd_bill = sd(bill_length_mm))
 ```
+
+Males seem to have slightly longer bills but since the sd's overlap this might not be significant. Also, we can see there that there is no large difference between the median and mean, so we likely have no outliers.
+
+Notice: in this case it doesn't make a difference if we use drop_na or na.rm=TRUE.
+
+</details>
 
 Summarizing our data is a good way to get a first feel for the data. Another good option to explore the data is to visualize this and we will do this in our next tutorial exploring ggplot2.
